added details page

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   position: relative;
   height: calc(100% - 128px);
-  background: url("/assets/dashboard-image.png") center no-repeat;
+  background: linear-gradient(178deg, #fff, grey, #fff);;
   background-size: cover;
 }
 
