--- a/src/app/components/shared/card/card.component.scss
+++ b/src/app/components/shared/card/card.component.scss
@@ -40,12 +40,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: max-content;
   }
 
   &__price {
     text-align: center;
     width: 100%;
     display: block;
+    height: min-content;
   }
 }
 
