--- a/src/app/components/post-details/post-details.component.html
+++ b/src/app/components/post-details/post-details.component.html
@@ -1,3 +1,9 @@
 <section class="post-details" *ngIf="(post$ | async) as post">
-  <img [src]="post.image" alt="poster image">
+  <img class="post-details__poster"  [src]="post.image" alt="poster image">
+  <div class="post-details__description">
+    {{ post.description }}
+  </div>
+  <div class="post-details__price">
+    <span>Price:{{ post.price + '$'}}</span>
+  </div>
 </section>
