--- a/src/app/components/shared/card/card.component.html
+++ b/src/app/components/shared/card/card.component.html
@@ -5,7 +5,7 @@
     <img class="info-card__top--poster" [src]="post.image" alt="poster image">
   </div>
   <div class="panel" [class.active]="isActivePanel">
-    <h2 class="panel__title m-0">{{ post.title }}</h2>
-    <span class="panel__price">{{ post.price }}$</span>
+    <h2 class="panel__title m-0">{{ isActivePanel ? post.title : '' }}</h2>
+    <span class="panel__price">{{ isActivePanel ? post.price + '$' : '' }}</span>
   </div>
 </div>
